# arduino-quadcopter

./: .gitignore  .gitmodules  LICENSE  README.md
MPUTeapot/: MPUTeapot.pde
arduQuad/lib/Controller/: controller.cpp
ardu_quad-control/: ardu_quad-control.ino  platformio.ini
ardu_quad-control/lib/Controller/: controller.h
ardu_quad-control/lib/Observer/: observer.cpp  observer.h
ardu_quad-control/libs/: radio_decoder.cpp  radio_decoder.h  transmitter.cpp  transmitter.h
ardu_quad-control/src/: main.cpp
dynamics_quad/: Makefile.am  autogen.sh  build.sh  configure.ac  quad_dynamics.m
dynamics_quad/matlab/: AltitudeController.m  AttitudeController.m  GetData.m  GetLinearSys.m  Observer.m  Omega2ThetaDot.m  OmegaDot.m  OptimalGain.m  PlotDrone.m  QuadSimulation.m  RotMatrix.m  ThetaDot2Omega.m  Torques.m
dynamics_quad/matlab/data/: ControlLog.mat  StateLog.mat
dynamics_quad/run/: run.sh
dynamics_quad/src/: Makefile.am  main.cpp  simulation.hh
